<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/inCodTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="23dp"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteTime"
        app:layout_constraintStart_toEndOf="@+id/btnInsertTime"
        app:layout_constraintTop_toBottomOf="@+id/inCidadeTime" />

    <EditText
        android:id="@+id/inCidadeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteTime"
        app:layout_constraintStart_toStartOf="@+id/btnInsertTime"
        app:layout_constraintTop_toBottomOf="@+id/inNomeTime" />

    <Button
        android:id="@+id/btnInsertTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnInsert"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateTime"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inCidadeTime" />

    <Button
        android:id="@+id/btnListTIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="41dp"
        android:text="@string/btnListAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuscarTime"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnDeleteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="14dp"
        android:text="@string/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpdateTime"
        app:layout_constraintTop_toBottomOf="@+id/inCidadeTime" />

    <EditText
        android:id="@+id/inNomeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/inCidadeTime"
        app:layout_constraintStart_toStartOf="@+id/inCidadeTime"
        app:layout_constraintTop_toBottomOf="@+id/inCodTime" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toStartOf="@+id/btnListTIme"
        app:layout_constraintStart_toEndOf="@+id/inCodTime"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvListarTime"
        android:layout_width="310dp"
        android:layout_height="154dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />
</androidx.constraintlayout.widget.ConstraintLayout>