<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentJogador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">

    <EditText
        android:id="@+id/inCodJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarJog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnBuscarJog"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toStartOf="@+id/btnListJog"
        app:layout_constraintStart_toEndOf="@+id/inCodJog"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnListJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:text="@string/btnListAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuscarJog"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inDataNascJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inNomeJog" />

    <Button
        android:id="@+id/btnInsertJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnInsert"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateJog"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTImesJog" />

    <Button
        android:id="@+id/btnUpdateJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteJog"
        app:layout_constraintStart_toEndOf="@+id/btnInsertJog"
        app:layout_constraintTop_toBottomOf="@+id/spTImesJog" />

    <Button
        android:id="@+id/btnDeleteJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="3dp"
        android:text="@string/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpdateJog"
        app:layout_constraintTop_toBottomOf="@+id/spTImesJog" />

    <EditText
        android:id="@+id/inNomeJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inCodJog" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogador"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inAlturaJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inDataNascJog" />

    <EditText
        android:id="@+id/inPesoJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inAlturaJog" />

    <Spinner
        android:id="@+id/spTImesJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inPesoJog" />

    <TextView
        android:id="@+id/outJogadores"
        android:layout_width="322dp"
        android:layout_height="87dp"
        android:layout_marginTop="536dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>